--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,7 +51,7 @@ section.main .project {
     // text-align: center;
     height: 200px;
     width: 200px;
-    margin: 10px;
+    margin: 10px 0 10px 20px;
 
 }
 
