--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Lato');
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700');
 
 body {
     font-family: Lato, sans-serif;
@@ -10,10 +10,10 @@ body .right_align {
 
 body hr {
     margin-top: 0;
-    margin-bottom: 40px;
+    margin-bottom: 80px;
     border-width: 0;
     border-top: 1px solid black;
-    width: 20px;
+    width: 0px;
     text-align: center;
 }
 
@@ -37,67 +37,39 @@ section.header ul a:hover {
     opacity: 0.5;
 }
 
+.social {
+    position: absolute;
+    bottom: 30px;
+    left: 50%;
+}
+
+.social .links {
+    position: relative;
+    left: -50%;
+}
 
 .social img {
     width: 30px;
-    margin-right: 15px;
+    margin-left: 8px;
+    margin-right: 8px;
 }
 
 .social img:hover {
     opacity: 0.5;
 }
 
-section.main .project {
-    // text-align: center;
-    height: 200px;
-    width: 200px;
-    margin: 10px 0 10px 20px;
-
-}
-
-section.main .project a {
-    text-decoration: none;
+body > section.main {
+    // background-color: #efefef;
     color: black;
-}
-
-section.main .project img {
-    width: 200px;
-    height: 200px;
-    position: absolute;
-}
-
-section.main .project img, section.main .project .description {
-    transition: opacity 0.2s ease-in-out;
-}
-
-section.main .project .description {
-    padding-top: 10px;
-    opacity: 0;
-    width: 200px;
-    height: 200px;
     text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
 }
 
-section.main .project .description .name {
-    font-weight: bold;
-}
-
-section.main .project .description .role {
-    font-style: italic;
-    margin-bottom: 10px;
-}
-
-section.main .project .description .date {
-    margin-top: 10px;
-    font-style: italic;
-}
-
-section.main .project:hover img {
-    opacity: 0.1;
-}
-
-section.main .project:hover .description {
-    opacity: 1;
+body > section.main > .row {
+    position: relative;
+    left: -50%;
 }
 
 @media only screen and (max-device-width: 640px), only screen and (max-device-width: 667px), only screen and (max-width: 480px) and (orientation : portrait){ 
