--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,99 +1,22 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:400,700');
-
-body {
-    font-family: Lato, sans-serif;
-}
-
-body .right_align {
-    text-align: right;
-}
-
-body hr {
-    margin-top: 0;
-    margin-bottom: 80px;
-    border-width: 0;
-    border-top: 1px solid black;
-    width: 0px;
-    text-align: center;
-}
-
-section.header {
-    margin-top: 40px;
-    text-align: center;
-}
-
-section.header ul {
-    list-style-type: none;
-}
-
-section.header ul a {
-    display: inline-block;
-    margin: 0 20px;
-    color: #BDC3C7;
-    text-decoration: none;
-}
-
-section.header ul a:hover {
-    opacity: 0.5;
-}
-
-.social {
+.body {
     position: absolute;
-    bottom: 30px;
+    top: 47%;
     left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    text-align: center;
 }
 
-.social .links {
-    position: relative;
-    left: -50%;
-}
-
-.social img {
+.body a img {
+    margin: 0 10px;
     width: 30px;
-    margin-left: 8px;
-    margin-right: 8px;
 }
 
-.social img:hover {
-    opacity: 0.5;
+.body a img:hover {
+    opacity: 0.7;
 }
 
-body > section.main {
-    // background-color: #efefef;
-    color: black;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-}
-
-body > section.main > .row {
-    position: relative;
-    left: -50%;
-}
-
-@media only screen and (max-device-width: 640px), only screen and (max-device-width: 667px), only screen and (max-width: 480px) and (orientation : portrait){ 
-
-    body section.main {
-        text-align: center;
-    }
-
-    body section.main h5 {
-        text-align: center;
-        font-size: 30px;
-        margin-top: 50px;
-    }
-
-    section.main .project {
-        display: block;
-        margin: auto;
-        float: none;
-        margin-bottom: 30px;
-    }
-    section.main .project img {
-        position: static;
-    }
-    section.main .project .description {
-        display: none;
-    }
+.name {
+    font-size: 36px;
+    margin-bottom: 30px;
+    font-family: "Source Sans Pro", sans-serif;
 }
